--- a/config-3/locales/fra/rights.yml
+++ b/config-3/locales/fra/rights.yml
@@ -2,7 +2,7 @@ fra:
   rights:
     backup_company: 'Effectuer/Recharger des sauvegardes'
     bookkeep: 'Basculer les opérations commerciales en comptabilité'
-    build_production_chains: 'Construire des chaînes de production' #!
+    build_production_chains: 'Construire des chaînes de production'
     cancel_sales_invoices: 'Faire des avoirs'
     change_prices_on_sales: 'Changer les prix au moment des ventes'
     close_journals: 'Clôturer et déclôturer des journaux'
@@ -69,7 +69,6 @@ fra:
     manage_warehouses: 'Gérer les lieux de stockage'
     merge_entities: 'Fusionner les fiches clients/fournisseurs'
     __minimum__: 'Accéder au minimum vital'
-    __not_used__: 'Droit par défaut (inaccessible)' #!
     print: 'Imprimer'
-    #>__public__: 'Public access'
-    use_production_chains: 'Utiliser les chaînes de production' #!
+    __public__: 'Public access'
+    use_production_chains: 'Utiliser les chaînes de production'
