--- a/config-3/locales/spa/action.yml
+++ b/config-3/locales/spa/action.yml
@@ -1014,9 +1014,9 @@ spa:
       #>unparted: 'Unused'
       #>waiting: 'To deposit later'
     overflow: 'CREDITO O ECCEDENTE'
-    page_title: '%{company_code} - %{controller} - %{action}'
-    page_title_by_default: 'Ekylibre - %{controller} - %{action}'
-    #>page_title_special: '%{company_code} - %{action}'
+    page_title: '%{company_code} - %{menu} - %{action}'
+    page_title_by_default: 'Ekylibre - %{action}'
+    page_title_special: '%{company_code} - %{action}'
     #>paid_amount: 'Paid amount'
     #>paid_on: 'Paid on'
     parameters: 'Parametros'
