--- a/config-3/locales/jpn/action.yml
+++ b/config-3/locales/jpn/action.yml
@@ -970,9 +970,9 @@ jpn:
       #>unparted: 'Unused'
       #>waiting: 'To deposit later'
     #>overflow: 'Overflow'
-    page_title: '%{company_code} - %{controller} - %{action}'
-    page_title_by_default: 'Ekylibre - %{controller} - %{action}'
-    #>page_title_special: '%{company_code} - %{action}'
+    page_title: '%{company_code} - %{menu} - %{action}'
+    page_title_by_default: 'Ekylibre - %{action}'
+    page_title_special: '%{company_code} - %{action}'
     #>paid_amount: 'Paid amount'
     #>paid_on: 'Paid on'
     #>parameters: 'Parameters'
