Fixes bug on debian building due to version filter. Adds push script in order to build debian/changelog with every commit from now.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1806 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/arb/action.yml
+++ b/config-3/locales/arb/action.yml
@@ -931,12 +931,12 @@ arb:
       stocks_tasks: 'الاسهم'
       tools: 'الادوات'
     menus:
-      #>accountancy: 'Accountancy'
-      #>finances: 'Finances'
-      #>general: 'General'
-      #>home: 'Home'
-      #>production: 'Production'
-      #>relations: 'Relations'
+      accountancy: 'المحاسبة'
+      finances: 'المالية'
+      general: 'شركة'
+      home: 'إستقبال'
+      production: 'المنتج'
+      relations: 'العلاقات'
       submenus:
         #>accounts: 'Accounts'
         #>cashes: 'Cashes'
@@ -963,7 +963,7 @@ arb:
         #>tasks: 'Tasks'
         #>tax_declarations: 'Tax declarations'
         #>tools: 'Tools'
-      #>trade: 'Trade'
+      trade: 'التجارة'
     merge: 'دمج'
     missing_help: 'صفحات مفقودة'
     #>mistake_on_quantities_sum: 'The sum of the quantities are not equals to the total produced quantity'
