--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -4,8 +4,10 @@ ekylibre (0.3.0+1.a1-1) unstable; urgency=low
   * Adds new menu
   * Fixes bug on debian building due to version filter. Adds push script
     in order to build debian/changelog with every commit from now.
+  * Changes version in alpha1 because thats the right version.s the
+    right version.
 
- -- Brice Texier <brice@thalie.nouva.local>  Fri, 17 Jun 2011 16:13:50 +0200
+ -- Brice Texier <brice@thalie.nouva.local>  Fri, 17 Jun 2011 16:16:35 +0200
 
 ekylibre (0.3.0) unstable; urgency=low
 
